--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Font family -->
-    <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
 
     <title>FieldX</title>
   </head>
